force-app/main/default/objects/ServiceOps_Snapshot__c/ServiceOps_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Stores periodic snapshots of operational health for trend reporting.</description>
    <label>ServiceOps Snapshot</label>
    <nameField>
        <displayFormat>SNAP-{000000}</displayFormat>
        <label>Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ServiceOps Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>