force-app/main/default/objects/ServiceOps_Snapshot__c/fields/Average_Reply_Age_Min__c.field-meta.xml
<CustomField>
    <fullName>Average_Reply_Age_Min__c</fullName>
    <label>Average Reply Age (Min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>