force-app/main/default/objects/ServiceOps_Snapshot__c/fields/Breached_Cases__c.field-meta.xml
<CustomField>
    <fullName>Breached_Cases__c</fullName>
    <label>Breached Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>