force-app/main/default/objects/ServiceOps_Snapshot__c/fields/Critical_Risk_Cases__c.field-meta.xml
<CustomField>
    <fullName>Critical_Risk_Cases__c</fullName>
    <label>Critical Risk Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>