force-app/main/default/objects/ServiceOps_Snapshot__c/fields/High_Risk_Cases__c.field-meta.xml
<CustomField>
    <fullName>High_Risk_Cases__c</fullName>
    <label>High Risk Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>