force-app/main/default/objects/ServiceOps_Snapshot__c/fields/Near_Breach__c.field-meta.xml
<CustomField>
    <fullName>Near_Breach__c</fullName>
    <label>Near Breach</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>