force-app/main/default/objects/ServiceOps_Snapshot__c/fields/Queue_Stuck_Cases__c.field-meta.xml
<CustomField>
    <fullName>Queue_Stuck_Cases__c</fullName>
    <label>Queue Stuck Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>