force-app/main/default/objects/ServiceOps_Snapshot__c/fields/Total_Open_Cases__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Cases__c</fullName>
    <label>Total Open Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>