force-app/main/default/objects/ServiceOps_Snapshot__c/fields/Waiting_On_Agent__c.field-meta.xml
<CustomField>
    <fullName>Waiting_On_Agent__c</fullName>
    <label>Waiting On Agent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>